--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "eslint": "^7.2.0",
     "express": "^4.17.1",
-    "jest": "^26.0.1",
     "mustache": "^4.0.1",
     "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
